<resources>
    <string name="app_name">Diver\'s Republic</string>
    <string name="btn_registar">REGISTRAR</string>
    <string name="btn_iniciar">INICIAR SESIÓN</string>
    <string name="introducir_usuario">Introduce el usuario o correo</string>
    <string name="introducir_contrasenia">Introduce la contraseña</string>
    <string name="btn_cancelar">CANCELAR</string>
    <string name="tv_registro"> REGISTRO DE USUARIO</string>
    <string name="introducir_correo">Introduce el correo</string>
    <string name="introducir_contrasenia_check">confirma la contraseña</string>
    <string name="toast_vacio">Debe rellenar todos los campos</string>
    <string name="toast_contra_check_fail">Las contraseñas no coinciden</string>
    <string name="toast_nombre_existe">El nombre de usuario ya existe</string>
    <string name="toast_correo_existe">El correo ya existe</string>
    <string name="user_registrado">Usuario registrado exitosamente</string>
    <string name="introducir_usuario_reg">Introduce el nombre de usuario</string>
    <string name="toast_no_existe">El usuario introducido no existe</string>
    <string name="toast_correo_invalido">Introduce un correo valido</string>
    <string name="nombre_no_correo">El nombre de usuario no puede ser un correo</string>
    <string name="title_activity_mapa">MapaActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toast_contra_incorrecta">Contraseña incorrecta</string>
    <string name="centro_buceo">Centros de Buceo</string>
    <string name="menu_resenias">Mis reseñas</string>
    <string name="menu_cuenta">Mi cuenta</string>
    <string name="tv_ver_resenias">VER RESEÑAS</string>
    <string name="tv_ver_inmersiones">VER INMERSIONES</string>
    <string name="tv_prof_max">Prof. max.: </string>
    <string name="tv_prof_med">Prof. media: </string>
    <string name="tv_temp_ver">Temp. media en Verano: </string>
    <string name="tv_temp_inv">Temp. media en Invierno: </string>
    <string name="tv_tiempo_med">Duracion aprox.: </string>
    <string name="tv_desc_inmers">A destacar:</string>
    <string name="tv_fauna_inmers">Fauna comun:</string>
    <string name="grados_celsius">° Celsius</string>
    <string name="minutos">min</string>
    <string name="metros">m</string>
    <string name="tv_escribir_resenia">ESCRIBIR RESEÑA</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="fd_btn_aceptar">ACEPTAR</string>
    <string name="fd_btn_cancelar">CANCELAR</string>
    <string name="toast_ya_resenia">Ya ha hecho una reseña para este centro</string>
    <string name="fd_btn_modificar">MODIFICAR</string>
    <string name="fd_btn_eliminar">ELIMINAR</string>
    <string name="cerrar_sesion">CERRAR SESION</string>

</resources>